# hoffmagic

./: .gitignore  Dockerfile  README.md  alembic.ini  bootstrap.sh  docker-compose.yml  flake.nix  justfile  pyproject.toml  repomix.config.json  tailwind.config.js
k8s/: configmap.yaml  deployment.yaml  service.yaml
nix/: default.nix  shell.nix
scripts/: deploy_k8s.sh  deploy_vps.sh  docker-entrypoint.sh  entrypoint.sh
src/content/blog/: welcome-post.md
src/content/essays/: digital-minimalism.md
src/hoffmagic/: config.py  i18n.py  logger.py  main.py
src/hoffmagic/api/: __init__.py  schemas.py
src/hoffmagic/api/routes/: __init__.py  about.py  blog.py  contact.py  essays.py
src/hoffmagic/cli_tools/: seed_content.py
src/hoffmagic/db/: engine.py  models.py
src/hoffmagic/db/migrations/: env.py
src/hoffmagic/db/migrations/versions/: 399b570eab29_msg_seed_preset_author.py  d928a76a14cb_add_portuguese_text_fields.py
src/hoffmagic/i18n/: __init__.py  languages.py
src/hoffmagic/i18n/en/: blog.json  common.json  home.json
src/hoffmagic/i18n/pt/: blog.json  common.json  home.json
src/hoffmagic/services/: about.py  blog.py  contact.py  essays.py
src/hoffmagic/static/css/: custom.css  input.css  main.css  minimalist.css  pygments.css
src/hoffmagic/templates/: about.html  base.html  contact.html  error.html  index.html
src/hoffmagic/templates/blog/: detail.html  list.html
src/hoffmagic/templates/essays/: detail.html  list.html
